--- a/LitLounge/Views/Book/Index.cshtml
+++ b/LitLounge/Views/Book/Index.cshtml
@@ -3,6 +3,7 @@
 *@
 @{
 }
+@Html.Partial("_Navbar")
 <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="row gx-4 gx-lg-5 align-items-center">
