--- a/LitLounge/Views/Book/Index.cshtml
+++ b/LitLounge/Views/Book/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://book-ye.com.ua/upload/resize_cache/iblock/0c8/520_860_1/30607952_c4d8_11ed_8186_0050568ef5e6_f9440cf5_c4d8_11ed_8186_0050568ef5e6.jpg" alt="..." /></div>
             <div class="col-md-6">
-                <div class="small mb-1">IBN: IBN Code</div>
+                <div class="small mb-1">ISBN: ISBN Code</div>
                 <h1 class="display-5 fw-bolder">Book's name</h1><p> </p>
                 <div class="fs-5 mb-5">
                     <h5>Author: Some Author</h5>
