--- a/LitLounge/Views/Book/Search.cshtml
+++ b/LitLounge/Views/Book/Search.cshtml
@@ -15,7 +15,7 @@
         <input type="password" class="form-control" id="inputPassword4">
     </div>
     <div class="col-md-4">
-        <label for="inputPassword4" class="form-label">IBN</label>
+        <label for="inputPassword4" class="form-label">ISBN</label>
         <input type="password" class="form-control" id="inputPassword4">
     </div>
     <div class="col-md-2">
