--- a/LitLounge/Views/Book/Search.cshtml
+++ b/LitLounge/Views/Book/Search.cshtml
@@ -4,13 +4,19 @@
 @model LitLounge.ViewModels.SearchViewModel
 @{
     ViewData["Title"] = "Search";
+
+    ViewBag.GenreNamesDropDownList = new List<SelectListItem>();
+    ViewBag.GenreNamesDropDownList.Add(new SelectListItem { Text = "Any", Value = "Any" });
+    for (int i = 0; i < ViewBag.Genres.Count; i++)
+        ViewBag.GenreNamesDropDownList.Add(new SelectListItem { Text = ViewBag.Genres[i].Name, Value = ViewBag.Genres[i].Name });
+
 }
 @Html.Partial("_Navbar")
 <form asp-action="Search" asp-controller="Book" class="row g-3" style="margin-top:50px">
     <div class="col-md-4">
-        <label asp-for="Name" class="form-label">Name</label>
-        <input asp-for="Name" class="form-control">
-        <span asp-validation-for="Name" class="text-danger"></span>
+        <label asp-for="BookName" class="form-label">BookName</label>
+        <input asp-for="BookName" class="form-control">
+        <span asp-validation-for="BookName" class="text-danger"></span>
     </div>
     <div class="col-md-4">
         <label asp-for="Author" class="form-label">Author</label>
@@ -36,15 +42,12 @@
         <input asp-for="YearTo" class="form-control" placeholder="To">
         <span asp-validation-for="YearTo" class="text-danger"></span>
     </div>
-@*    <div class="col-md-4">
-        <label for="inputState" class="form-label">Genre</label>
-        <select id="inputState" class="form-select">
-            <option selected>Choose...</option>
-            <option>...</option>
-        </select>
+    <div class="col-md-4">
+        <label asp-for="Genre" class="form-label">Genre</label>
+        @Html.DropDownList("Genre", (IEnumerable<SelectListItem>)ViewBag.GenreNamesDropDownList, new { @class = "form-select"})
     </div>
-*@    <div class="col-md-4" style="display:flex; align-items: center;">
-        <button type="submit" class="btn btn-primary" style="width:100%; padding:10px">Search</button>
+    <div class="col-md-4" style="display:flex; align-items: center;">
+        <input type="submit" class="btn btn-primary" value="Search" style="width:100%; padding:10px" />
     </div>
 </form>
 <table class="table" style="margin-top:50px">
