Genre to Category

--- a/LitLounge/Views/Book/Book.cshtml
+++ b/LitLounge/Views/Book/Book.cshtml
@@ -13,7 +13,7 @@
                 <h1 class="display-5 fw-bolder">Book's name</h1><p> </p>
                 <div class="fs-5 mb-5">
                     <h5>Author: Some Author</h5>
-                    <h5>Genre: Some Genre</h5>
+                    <h5>Category: Some Category</h5>
                     <h5>Page count: 150</h5>
                     <h5>Publishing: Some Publishing</h5>
                     <h5>Publishing year: 2020</h5>
