--- a/LitLounge/Views/Shared/_Navbar.cshtml
+++ b/LitLounge/Views/Shared/_Navbar.cshtml
@@ -45,7 +45,7 @@
                         <li>@Html.ActionLink("Fantasy", "Search", "Book", new { category = "Fantasy" }, new { @class="dropdown-item" })</li>
                         <li>@Html.ActionLink("Biography", "Search", "Book", new { category = "Biography" }, new { @class="dropdown-item" })</li>
                         <li>@Html.ActionLink("History", "Search", "Book", new { category = "History" }, new { @class="dropdown-item" })</li>
-                        <li>@Html.ActionLink("Art and Design", "Search", "Book", new { category = "Art and Design" }, new { @class="dropdown-item" })</li>
+                        <li>@Html.ActionLink("Graphic Novels", "Search", "Book", new { category = "Graphic Novels" }, new { @class="dropdown-item" })</li>
                     </ul>
                 </li>
             </ul>
