--- a/LitLounge/Views/Home/Index.cshtml
+++ b/LitLounge/Views/Home/Index.cshtml
@@ -14,20 +14,15 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            @for (int i = 0; i < 7; i++)
+            @foreach (var book in ViewBag.MainPageBooks)
             {
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Sale badge-->
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Bestseller</div>
-                        <!-- Product image-->
-                        <img class="card-img-top" src="https://book-ye.com.ua/upload/resize_cache/iblock/0c8/520_860_1/30607952_c4d8_11ed_8186_0050568ef5e6_f9440cf5_c4d8_11ed_8186_0050568ef5e6.jpg" alt="..." />
-                        <!-- Product details-->
+                        <img class="card-img-top" src="~/lib/bookcovers/@(book.Isbn).jpg" alt="@book.Name" />
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">Book name</h5>
-                                <!-- Product reviews-->
+                                <h5 class="fw-bolder">@book.Name</h5>
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
@@ -35,8 +30,7 @@
                                     <div class="bi-star-fill"></div>
                                     <div class="bi-star-fill"></div>
                                 </div>
-                                <!-- Book genre -->
-                                $18.00
+                                @book.Category.Name
                             </div>
                         </div>
                         <!-- Product actions-->
